--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@ header {
 	align-items: center;
 }
 
-h1 {
+* {
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 1rem;
 }
