--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -1,7 +1,17 @@
 #game-area {
-	display: flex;
-	flex-direction: column;
-	margin: 1rem;
+	width: 15rem;
+	height: 15rem;
+}
+
+#buttons-area {
+	position: relative;
+	top: -14.6rem;
+	left: 0.3rem;
+}
+
+#game-board-img {
+	width: 15rem;
+	height: 15rem;
 }
 
 #game-area #row {
@@ -9,6 +19,14 @@
 }
 
 #game-button {
-	width: 3rem;
-	height: 3rem;
+	border: none;
+	background: none;
+
+	margin: 0.25rem;
+	width: 4rem;
+	height: 4rem;
+}
+
+#icon {
+	width: 2rem;
 }
