--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,18 @@
 img {
-	width: 3rem;
+	width: 2rem;
 }
 
 #players {
 	display: flex;
 	justify-content: center;
+	margin: 2rem 0;
 }
 
 #game-board {
+	animation: alo 2s;
+}
+
+main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
