--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,26 @@ header {
 	align-items: center;
 }
 
+button {
+	border: none;
+	border-radius: 0.3rem;
+	padding: 0 1rem;
+	height: 2rem;
+	background-color: rgb(225, 225, 225);
+}
+
 * {
+	overflow: -moz-hidden-unscrollable;
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+@keyframes slide-in-from-left {
+	0% {
+		opacity: 0;
+		transform: translateX(-30%);
+	}
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
 }
